syntax = "proto3";

// This message is used to bootstrap the root key for a newly created authz tp,
// it can only be executed once
message BootstrapRoot { string public_key = 1; }

message RegisterKey {
  string public_key = 1;
  string id = 2;
  bool overwrite_existing = 3;
}

// Rotate the key with name to the new public key, the SignedOperation for this
// message must be signed by the old key. The signature must be valid for
// the new one, to demonstrate ownership of both keys
message RotateKey {
  message NewPublicKey {
    bytes public_key = 1;
    string id = 2;
  }
  NewPublicKey payload = 1;
  string previous_signing_key = 4;
  bytes previous_signature = 5;
  string new_signing_key = 6;
  bytes new_signature = 7;
}

// Set the policy with name to the new policy, the SignedOperation for this must
// be signed by the root key
message SetPolicy {
  string id = 1;
  bytes policy = 2;
}

// An OPA TP operation and its signature
message SignedOperation {
  message Payload {
    oneof operation {
      RegisterKey register_key = 1;
      RotateKey rotate_key = 2;
      SetPolicy set_policy = 3;
    }
  }

  Payload payload = 1;
  string verifying_key = 4;
  bytes signature = 5;
}

message Submission {
  string version = 1;
  uint64 span_id = 2;
  oneof payload {
    BootstrapRoot bootstrap_root = 3;
    SignedOperation signed_operation = 4;
  }
}
